--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "testing-library/no-container": "off",
+      "testing-library/no-node-access": "off"
+    }
   },
   "browserslist": {
     "production": [
