Add tests to CreateTaskComponent

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     ],
     "rules": {
       "testing-library/no-container": "off",
-      "testing-library/no-node-access": "off"
+      "testing-library/no-node-access": "off",
+      "testing-library/no-unnecessary-act": "off"
     }
   },
   "browserslist": {
